--- a/Resources/js/WebView.css
+++ b/Resources/js/WebView.css
@@ -1,7 +1,4 @@
-body {
-    position: inherit !important;
-}
-.header-container, nav, .bar, #gd-topbar {
+.header-container, nav, #gd-topbar {
     display: none !important;
 }
 
@@ -9,14 +6,6 @@ body {
     display: none !important;
 }
 
-div.content {
-    padding-top: 0px !important;
-    overflow: visible;
-}
 canvas {
     -webkit-tap-highlight-color: transparent;
 }
-.table-view {
-    margin-top:-1px;
-}
-
