--- a/Resources/Neeman.storyboard
+++ b/Resources/Neeman.storyboard
@@ -33,7 +33,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oV5-pq-gIu" userLabel="login container" customClass="RoundCorneredView" customModule="Neeman" customModuleProvider="target">
                                         <rect key="frame" x="160" y="130" width="280" height="180"/>
                                         <subviews>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rnk-M5-mH9" userLabel="username" customClass="LoginTextField" customModule="Neeman" customModuleProvider="target">
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="rnk-M5-mH9" userLabel="username" customClass="LoginTextField" customModule="Neeman" customModuleProvider="target">
                                                 <rect key="frame" x="20" y="20" width="240" height="40"/>
                                                 <color key="backgroundColor" red="0.89019608500000003" green="0.89019608500000003" blue="0.89019608500000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 <color key="textColor" red="0.31764706970000001" green="0.31764706970000001" blue="0.31764706970000001" alpha="1" colorSpace="calibratedRGB"/>
