Clean up the Github example.

--- a/Examples/Github/Github/js/WebView.css
+++ b/Examples/Github/Github/js/WebView.css
@@ -1,6 +1,6 @@
 header.nav-bar {
-    display: none !important;
+    display: none;
 }
 footer {
-    display: none !important;
+    display: none;
 }
